#6447 - Blog: fix carousel title alignment

--- a/public/less/ssb-site-builder/ssb-components/ssb-blog-post-list.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-blog-post-list.less
@@ -23,7 +23,7 @@
 
     .ssb-media-body {
         position: absolute;
-        bottom: 50%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
     }
